<resources>
    <string name="app_name">My Calculator</string>
    <string name="_9">9</string>
    <string name="mi_calculadora">Mi Calculadora</string>
    <string name="division">/</string>
    <string name="multiplicacion">x</string>
    <string name="resta">-</string>
    <string name="suma">+</string>
    <string name="clear">C</string>
    <string name="igual">=</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_0">0</string>
</resources>